<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (C) 2022  The Android Open Source Project
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="btn_retry">Retry</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nameofcoin">nameOfCoin</string>
    <string name="current_price">current price</string>
    <string name="us">US$</string>
    <string name="_7day">7day</string>
    <string name="_1day">1Day</string>
    <string name="market_cap">Market Cap</string>
    <string name="market_capp">Market Cap :</string>
</resources>