<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollDetail"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailFragment"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="#ECE3E3">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/white_500">


        <TextView
            android:id="@+id/name_0f_coin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:text="@string/nameofcoin"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.053"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/current_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/current_price"
            android:textStyle="bold"
            android:textColor="@color/black"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.162"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="4dp"
            android:text="US$"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintEnd_toStartOf="@+id/current_price"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/name_0f_coin" />


        <Button
            android:id="@+id/buttonOneDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="319dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/costum_button"
            android:text="@string/_1day"
            app:layout_constraintBottom_toTopOf="@+id/lineChart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_price" />

        <Button
            android:id="@+id/buttonSevenDay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/costum_button"
            android:text="@string/_7day"
            app:layout_constraintBottom_toTopOf="@+id/lineChart"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.287"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/current_price"
            app:layout_constraintVertical_bias="0.172" />

        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lineChart"
            android:layout_width="400dp"
            android:layout_height="400dp"
            android:layout_marginTop="24dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.363"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonOneDay">

        </com.github.mikephil.charting.charts.LineChart>

        <RelativeLayout
            android:layout_width="390dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/costum_button"
            android:backgroundTint="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.476"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lineChart"
            app:layout_constraintVertical_bias="0.0">

            <TextView
                android:id="@+id/marketCap"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="15dp"
                android:text="Market Cap : " />

            <TextView
                android:id="@+id/marketCap2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/marketCap"
                android:layout_marginStart="10dp"
                android:layout_marginRight="5dp"
                android:textStyle="bold"
                android:text="@string/market_cap"
                tools:layout_editor_absoluteX="2dp"
                tools:layout_editor_absoluteY="554dp" />

            <TextView
                android:id="@+id/percent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/marketCap2"
                android:layout_marginStart="15dp"
                android:layout_marginTop="10dp"
                android:text="Percent : "
                tools:layout_editor_absoluteX="3dp"
                tools:layout_editor_absoluteY="546dp" />

            <TextView
                android:id="@+id/percentSecond"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/percent"
                android:layout_marginStart="25dp"
                android:textStyle="bold"
                android:text="percent"
                tools:layout_editor_absoluteX="62dp"
                tools:layout_editor_absoluteY="545dp" />

        </RelativeLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
 </ScrollView>